# oc-tree

./: doc.md  eliminarzone.ipynb  main.py  practica2_completa.md
Datos/Visor/: CMakeLists.txt  README.txt  visor3D.cpp
