cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
project(MY_GRAND_PROJECT)
find_package(PCL 1.3 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(visor3D visor3D.cpp)
target_link_libraries(visor3D ${PCL_LIBRARIES})
